# FallingRust

./: .gitignore  Cargo.toml  README.md
crates/lib/shaders/: compute.wgsl  material.wgsl  noise.wgsl  random.wgsl  simulation.wgsl
crates/lib/shaders/compute/: Cargo.toml
crates/lib/shaders/compute/src/: lib.rs
data/textures/materials/: .water.png-autosave.kra  sand.png.kra  water.png.kra
noise/: noise.wgsl
shaders/: noise.wgsl
src/: assets.rs  brush.rs  cell.rs  cellhandler.rs  chunk.rs  gui.rs  lib.rs  main.rs  material.rs  matrix.rs  reaction.rs  renderer.rs  sprite.rs  texturehandler.rs
