[package]
name = "falling_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.68"
bytemuck = "1.12.3"
byteorder = "1.4.3"
egui = "0.20.1"
egui-wgpu = "0.20.0"
egui-winit = "0.20.1"
env_logger = "0.10.0"
getrandom = "0.2.8"
glam = "0.22.0"
image = "0.24.5"
line_drawing = "1.0.0"
log = "0.4.17"
pixels = "0.11.0"
rand = "0.8.5"
randomize = "3.0.1"
rayon = "1.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"
winit = "0.27.5"
winit_input_helper = "0.13.0"
